# aws-policies-analyzer-sdk

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml
src/aws_policies_analyzer_sdk/: __init__.py  cli.py
tests/: test_analyze.py
tests/datas/: mock_cross_ref.json
